[gd_scene load_steps=23 format=2]

[ext_resource path="res://Fonts/standardUI.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/titleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/PauseMenue/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/CreditsScreen/CreditsScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/PauseMenue/CustomSlider/AudioCusSlider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/UI/double-quaver.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/speaker.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/double-quaver_disabled.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/speaker_disabled.png" type="Texture" id=9]
[ext_resource path="res://Scenes/UI/PauseMenue/MusicController.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UI/SettingsScreen/SettingsScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Perks/PerkTheme.tres" type="Theme" id=12]
[ext_resource path="res://Scenes/UI/MainMenu/ButtonStyleNormal1.tres" type="StyleBox" id=13]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.372549, 0.227451, 0.227451, 1 )
border_width_left = 8
border_color = Color( 0.270588, 0.164706, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.4, 0.278431, 0.278431, 1 )
border_width_left = 8
border_color = Color( 0.270588, 0.164706, 0.164706, 1 )

[sub_resource type="Theme" id=12]
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 11 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.494118, 0.0901961, 0.0901961, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 9
shadow_size = 14

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 9
shadow_size = 14

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 9
shadow_size = 14

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.494118, 0.0901961, 0.0901961, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 9
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color( 0.494118, 0.0901961, 0.0901961, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_detail = 20

[sub_resource type="Theme" id=18]
Button/colors/font_color = Color( 0.494118, 0.0901961, 0.0901961, 1 )
Button/colors/font_color_focus = Color( 0.494118, 0.0901961, 0.0901961, 1 )
Button/styles/focus = SubResource( 13 )
Button/styles/hover = SubResource( 15 )
Button/styles/normal = ExtResource( 13 )
Button/styles/pressed = SubResource( 16 )
Label/colors/font_color = Color( 0.494118, 0.0901961, 0.0901961, 1 )
Label/styles/normal = SubResource( 17 )
PanelContainer/styles/panel = ExtResource( 13 )
RichTextLabel/styles/normal = ExtResource( 13 )
TabContainer/styles/panel = ExtResource( 13 )
TabContainer/styles/tab_fg = SubResource( 14 )
Tabs/styles/button = ExtResource( 13 )
Tabs/styles/button_pressed = ExtResource( 13 )
Tabs/styles/tab_bg = ExtResource( 13 )
Tabs/styles/tab_disabled = ExtResource( 13 )
Tabs/styles/tab_fg = ExtResource( 13 )

[node name="PauseMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1536.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.352941, 0.333333, 0.333333, 0 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1536.0
margin_bottom = 900.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 110.0
margin_right = 1224.0
margin_bottom = 789.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 912.0
margin_bottom = 163.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSE_MENU"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 912.0
margin_bottom = 177.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 912.0
margin_bottom = 679.0
alignment = 1

[node name="SFXSlider" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 267.0
margin_right = 307.0
margin_bottom = 498.0
theme = SubResource( 12 )
button_texture = ExtResource( 7 )
audio_channel = "SFX"
button_texture_disabled = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 311.0
margin_right = 601.0
margin_bottom = 498.0
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="ReturnButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 90.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "RETURN"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 290.0
margin_bottom = 184.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "OPTIONS"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 290.0
margin_bottom = 278.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "CREDITS"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 290.0
margin_bottom = 372.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "RESTART"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 376.0
margin_right = 290.0
margin_bottom = 466.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "EXIT"

[node name="MusicController" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 470.0
margin_right = 290.0
margin_bottom = 498.0
size_flags_vertical = 3
theme = SubResource( 18 )

[node name="MusicSlider" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 605.0
margin_right = 645.0
margin_bottom = 498.0
theme = SubResource( 12 )
button_texture = ExtResource( 6 )
audio_channel = "Music"
button_texture_disabled = ExtResource( 8 )

[node name="CreditsScreen" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1536.0
margin_bottom = 900.0

[node name="SettingsScreen" parent="." instance=ExtResource( 11 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1536.0
margin_bottom = 900.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
